correcttion iphone

--- a/css/styles.css
+++ b/css/styles.css
@@ -986,7 +986,7 @@ a {
   #searchbar {
     position: relative;   
     width: 87%;
-    margin-left: 19px;
+    margin-left: 30px;
   }
 
   #locationicon {
@@ -1007,7 +1007,7 @@ a {
     text-decoration: none;
     display: block;
     position: absolute;
-    right: -15px;
+    right: 1px;
     font-size: 14px;
     padding: 16.5px 16px;
     color: #ffffff;
